--- a/taskly-app/src/styles/table/components/_table-page.scss
+++ b/taskly-app/src/styles/table/components/_table-page.scss
@@ -4,7 +4,7 @@
   -webkit-backdrop-filter: blur(12px);
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 85%;
   overflow: hidden;
 
   .table-header {
