--- a/taskly-app/src/styles/general/information-alert-style.scss
+++ b/taskly-app/src/styles/general/information-alert-style.scss
@@ -10,6 +10,7 @@
     padding: 20px;
     box-sizing: border-box;
     background-color: rgb(255, 255, 255);
+    color: black;
     z-index: 100;
     align-self: center;
     animation: showInformationAlert 0.3s linear 0s forwards, closeInformationAlert 0.3s linear 4s forwards;
