--- a/taskly-app/src/styles/board/board-page-style.scss
+++ b/taskly-app/src/styles/board/board-page-style.scss
@@ -1,3 +1,61 @@
+.board-members-items {
+    width: 300px;
+    height: 100%;
+    max-height: 470px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+
+    .board-member-item {
+        width: 100%;
+        height: 50px;
+        padding: 5px 10px;
+        box-sizing: border-box;
+        border: 1px solid #6822ca;
+        color: #6822ca;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+        column-gap: 10px;
+        font-size: 17px;
+
+        p {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+
+        img {
+            width: 30px;
+            height: 30px;
+        }
+
+        .buttons {
+            margin-left: auto;
+
+            button {
+                font-size: 17px;
+                padding: 5px 10px;
+                border-radius: 10px;
+                box-sizing: border-box;
+                outline: none;
+                background-color: #6822ca;
+                border: 1px solid transparent;
+                color: white;
+                transition: all 0.7s;
+
+                &:hover {
+                    background-color: white;
+                    border: 1px solid #6822ca;
+                    color: #6822ca;
+                }
+            }
+        }
+
+    }
+}
+
 .board-page-container {
     width: 70%;
     height: 89%;
@@ -9,6 +67,8 @@
     overflow-y: hidden;
     box-sizing: border-box;
     position: relative;
+
+
 
 
     p {
