--- a/taskly-app/src/styles/general/hide-menu-container-style.scss
+++ b/taskly-app/src/styles/general/hide-menu-container-style.scss
@@ -32,7 +32,6 @@
 
     .hide-menu-items {
         width: 100%;
-        height: 100%;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -40,6 +39,21 @@
 
         .menu-item {
             @include menuItem();
+        }
+
+    }
+
+    .hide-menu-authentication-buttons {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        row-gap: 10px;
+
+        button {
+            @include defaultButton(100px, 21px);
+            height: auto;
+            align-self: flex-start;
+            margin-top: 0;
         }
 
     }
