--- a/taskly-app/src/styles/authentication/login-style.scss
+++ b/taskly-app/src/styles/authentication/login-style.scss
@@ -13,7 +13,7 @@
         font-size: 27px;
     }
 
-    form {
+    form.email-form {
         display: flex;
         flex-direction: column;
         width: 100%;
@@ -153,7 +153,35 @@
                     }
                 }
             }
-            }
+        }
+    }
+}
+
+form.use-referral-code {
+
+
+    display: flex;
+    width: 100%;
+    height: 50px;
+    padding: 10px;
+    column-gap: 10px;
+
+    box-sizing: border-box;
+
+    input.use-referral-input {
+        width: 70%;
+        padding: 5px 10px;
+        border-radius: 10px;
+        font-size: 17px;
+        border: none;
+        outline: none;
+        box-sizing: border-box;
+    }
+
+    button.use-referral-button {
+
+        @include defaultButton($buttonWidth: 150px, $font_size: 13px);
+        height: 100%;
     }
 }
 
@@ -177,4 +205,3 @@
         }
     }
 }
-
