--- a/taskly-app/src/styles/user/profile-style.scss
+++ b/taskly-app/src/styles/user/profile-style.scss
@@ -166,3 +166,15 @@
     justify-content: center;
     align-items: flex-start;
 }
+
+@media (max-width: 600px) {
+    .profile-container {
+        position: static;
+        transform: none;
+        width: 95%;
+        min-width: auto;
+        margin-top: 20px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
