--- a/taskly-app/src/styles/general/menu-container-style.scss
+++ b/taskly-app/src/styles/general/menu-container-style.scss
@@ -132,3 +132,28 @@
         }
     }
 }
+
+.user-info {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    position: relative;
+}
+
+.user-badge {
+    position: absolute;
+    top: -3px;
+    right: -20px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.user-badge img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
