Fix bugs, update functional and style

--- a/taskly-app/src/styles/general/input-for-code-style.scss
+++ b/taskly-app/src/styles/general/input-for-code-style.scss
@@ -10,7 +10,8 @@
         height: 100%;
         outline: none;
         font-size: 21px;
-        border: 1px solid black;
+        //border: 1px solid black;
+        border: none;
         border-radius: 3px;
         text-align: center;
         padding: 5px 10px;
