--- a/taskly-app/src/styles/authentication/final-register-style.scss
+++ b/taskly-app/src/styles/authentication/final-register-style.scss
@@ -1,5 +1,25 @@
 @use '../general/general-style.scss' as *;
 
+.avatar-list {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px;
+    column-gap: 10px;
+    row-gap: 10px;
+    box-sizing: border-box;
+
+    img {
+        width: 70px;
+        height: 70px;
+        cursor: pointer;
+
+        &:hover {
+            background-color: #dbdbdb;
+        }
+    }
+}
+
 .final-register-page-container {
     width: 100%;
     height: auto;
@@ -29,7 +49,7 @@
             input {
                 @include defaultInput();
                 width: 80%;
-                padding: 5px 42px 5px 10px;
+                padding: 5px 40px 5px 10px;
 
                 &:focus {
                     padding: 4px 34px 4px 9px;
@@ -41,7 +61,7 @@
                 height: 29px;
                 position: absolute;
                 padding: 5px;
-                right: 75px;
+                right: 60px;
                 top: 4px;
                 box-sizing: border-box;
                 background-color: #ffffff;
@@ -63,6 +83,7 @@
                 width: 15%;
                 height: 100%;
                 padding: 5px 10px;
+                border-radius: 10px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -88,7 +109,7 @@
                     width: 50px;
                     height: 50px;
                     padding: 5px;
-                    border: 1px solid black;
+                    border: 1px solid white;
                     border-radius: 3px;
                     box-sizing: border-box;
                 }
