--- a/taskly-app/src/styles/general/information-alert-style.scss
+++ b/taskly-app/src/styles/general/information-alert-style.scss
@@ -1,5 +1,6 @@
 .information-container {
     width: 400px;
+    min-height: 70px;
     display: grid;
     position: fixed;
     top: -100px;
@@ -9,8 +10,8 @@
     column-gap: 10px;
     padding: 20px;
     box-sizing: border-box;
-    background-color: rgb(255, 255, 255);
-    color: black;
+    background-color: rgba(255, 255, 255, 0.1);
+    color: white;
     z-index: 100;
     align-self: center;
     animation: showInformationAlert 0.3s linear 0s forwards, closeInformationAlert 0.3s linear 4s forwards;
