--- a/taskly-app/src/styles/general/main-container-style.scss
+++ b/taskly-app/src/styles/general/main-container-style.scss
@@ -3,6 +3,8 @@
   flex-direction: column;
   min-height: 100vh;
   width: 100%;
+  //background: linear-gradient(135deg, #8e2de2, #EB58D7);
+
   background: linear-gradient(135deg, #8e2de2, #4a00e0);
   font-family: "Inter", sans-serif;
   color: white;
